# savefile.rs

./: Cargo.toml  Changes.md  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: bin.rs  hash.rs  lib.rs  types.rs
t/+99 IST/: edizon_save_metadata.json  option.sav
t/+99 IST/0/: caption.sav  game_data.sav
t/+99 IST/1/: caption.sav  game_data.sav
t/+99 IST/2/: caption.sav  game_data.sav
t/+99 IST/3/: caption.sav  game_data.sav
t/+99 IST/4/: caption.sav  game_data.sav
t/+99 IST/5/: caption.sav  game_data.sav
t/+99 IST/7/: caption.sav  game_data.sav
t/+99 IST/tracker/: trackblock00.sav  trackblock_hard00.sav
t/+99 cleanup/: option.sav
t/+99 cleanup/0/: caption.sav  game_data.sav
t/+99 cleanup/1/: caption.sav  game_data.sav
t/+99 cleanup/2/: caption.sav  game_data.sav
t/+99 cleanup/3/: caption.sav  game_data.sav
t/+99 cleanup/4/: caption.sav  game_data.sav
t/+99 cleanup/5/: caption.sav  game_data.sav
t/+99 cleanup/6/: caption.sav  game_data.sav
t/+99 cleanup/tracker/: trackblock00.sav  trackblock01.sav  trackblock02.sav  trackblock03.sav
t/3AA Blights Segment Start v2/: edizon_save_metadata.json  option.sav
t/3AA Blights Segment Start v2/0/: caption.sav  game_data.sav
t/3AA Blights Segment Start v2/1/: caption.sav  game_data.sav
t/3AA Blights Segment Start v2/2/: caption.sav  game_data.sav
t/3AA Blights Segment Start v2/3/: caption.sav  game_data.sav
t/3AA Blights Segment Start v2/4/: caption.sav  game_data.sav
t/3AA Blights Segment Start v2/5/: caption.sav  game_data.sav
(+11 files in other folders)
